@@ -3,15 +3,17 @@ Hash: SHA1
 
 DIST xfce4-settings-4.5.92.tar.bz2 414685 RMD160 2be522f6828a46f0348d1942bad066de974d65a1 SHA1 3197160edb6c390e11dae0a1cebd1207e6ff6a74 SHA256 a2c00e5890cb683aa353e2d7f64cd01cbf741209e5e7f124e477ce14c010e2c7
 DIST xfce4-settings-4.5.93.tar.bz2 474472 RMD160 3a4736a39292cc91548398ffbc761c229d9ae999 SHA1 5dba062675d89de24de5daf77f51c4bb1e19ec34 SHA256 154b0517962f6217bd1d9d80da824e47c098a253caddba74059c9032befedeb8
+DIST xfce4-settings-4.5.99.1.tar.bz2 471263 RMD160 99ca46b664da362dbe27729ac2cb35890e015eda SHA1 eb724691b38bbdd90aea818f85799850adfbf313 SHA256 7eceb8d0512c292da2ed30d4a329c399d9a64501be74bb32f99772a658b2a099
 EBUILD xfce4-settings-4.5.92.ebuild 1082 RMD160 c308e6217a488fea8f530cd45e471815e9af0fd2 SHA1 38ee8a02e7e7c99921530ec4b3a5b4418fce9f8e SHA256 dcac9b9e0e2e2cbc06c77b4da979ade37dff570923b966f4999ae5066749a1f6
 EBUILD xfce4-settings-4.5.93.ebuild 1082 RMD160 c308e6217a488fea8f530cd45e471815e9af0fd2 SHA1 38ee8a02e7e7c99921530ec4b3a5b4418fce9f8e SHA256 dcac9b9e0e2e2cbc06c77b4da979ade37dff570923b966f4999ae5066749a1f6
+EBUILD xfce4-settings-4.5.99.1.ebuild 1082 RMD160 c308e6217a488fea8f530cd45e471815e9af0fd2 SHA1 38ee8a02e7e7c99921530ec4b3a5b4418fce9f8e SHA256 dcac9b9e0e2e2cbc06c77b4da979ade37dff570923b966f4999ae5066749a1f6
 EBUILD xfce4-settings-9999.ebuild 1195 RMD160 868f12fcb571a176f6d9b059a2cd2e59bd1c5ec9 SHA1 e28488b36b26b4a09fafd2ad230c842939efd4f5 SHA256 d1181bbf949f3d1cabb9acf57030ecd3554d2fe4c0134bb2d2d7bb630b1fcdba
-MISC ChangeLog 2076 RMD160 c17326aba1388a9e2bda36fc4bde0dcf0040f909 SHA1 db951cb9287b8bdb46b42a62a413278cff056466 SHA256 f4b5808c99ec4a5efacc8171a56affa796c4c83e1a563286b17feb61b174d1e9
+MISC ChangeLog 2219 RMD160 f850324fc872375876b4a6480e9bcea329b02a72 SHA1 e6502b88ede12c88799b7a07e28a83567845bb49 SHA256 3ea88e2e338f3e8e5741339c6e3ebca4e3ce97978caba7b38690f3a65921755a
 MISC metadata.xml 363 RMD160 2f66508d394f9cc14654775f3a0b117bc10d3ef5 SHA1 8a3e6715e41535ea04377624a621c9ada60fd5ff SHA256 2442135d806e37420f1904d5b32e8b7afe94ed212307d25667f363db06c558e3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkluEYcACgkQKhnDs22gwa+jogCgn4B9IFJjXchFPrfLVQ1QCVl5
-2EAAoPlZegkciOp46yxf2YH9fByJAovg
-=+HmN
+iEYEARECAAYFAkl9xbsACgkQKhnDs22gwa9D2ACeJu4mR0vu1gZcEHGMZx/nZMKH
+Q0MAn1zRrXAesxws8odlE1mxGU5SzgMN
+=lvkz
 -----END PGP SIGNATURE-----
